--- a/index.html
+++ b/index.html
@@ -11,8 +11,241 @@
 
 <body>
 
+<header id="nav">
+  <nav class="navbar fixed-top navbar-light" style="background-color:#ddd;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" /></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="#slider">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="#categories">categories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#shoes">Shoes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#bag">Backpack</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#from">Sing up</a>
+        </li>
+       
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+</header>
+  <section id="slider">
+    <div class="container">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <div class="row align-items-center">
+              <div class="col-md-7 align-items-center">
+                <h1>Mega LCD TV For Sports</h1>
+                <p>
+                  This is the best tv in the world for people who just want to waste time in front of tv.
+                </p>
+                <h1 class="tk">$1200</h1>
+                <button class="my_btn" type="submit">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="images/banner-images/tv.png" class="d-block w-100" alt="tv">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <div class="row align-items-center" >
+              <div class="col-md-7 align-items-center">
+                <h1>Cool Dude Headphone</h1>
+                <p>
+                  This is the best headphone in the world for people who just want to waste time in front of funky world.
+                </p>
+                <h1 class="tk">$300</h1>
+                <button class="my_btn" type="submit">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="headphone">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>X-Box for your living room</h1>
+                <p>
+                  This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                </p>
+                <h1 class="tk">$600</h1>
+                <button class="my_btn" type="submit">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="xbox">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </section>
+  <section id="categories">
+    <div class="container">
+      <div class="row g-3">
+        <div class="col-md-4  ">
+          <div class="align-items-center justify-content-center d-flex justify-content-between cat_1 img ">
+            <h1> Watch</h1>
+            <img src="images/categories/watch.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4 ">
+          <div class="align-items-center justify-content-center d-flex justify-content-between cat_2 img">
+            <h1>Bag</h1>
+            <img src="images/categories/bag.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="align-items-center justify-content-center d-flex justify-content-between cat_3 img">
+            <h1>Shoes</h1>
+            <img src="images/categories/shoes.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
+  <section id="categories-shoes">
+    <div class="container">
+      <h1 id="shoes" style="text-align: center;margin-bottom: 50px;">Shoes</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card ">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural additional.</p>
+              <h5>$199</h5>
+            <button type="button" class="btn btn-outline-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural content.</p>
+              <h5>$299</h5>
+              <button type="button" class="btn btn-outline-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural content.</p>
+              <h5>$499</h5>
+              <button type="button" class="btn btn-outline-danger">Buy Noe</button>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
+ <section id="categories-shoes">
+    <div class="container">
+     <h1 id="bag" style="text-align: center;margin-bottom: 50px;">Backpack</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">balck cok 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural additional.</p>
+              <h5>$199</h5>
+            <button type="button" class="btn btn-outline-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural content.</p>
+              <h5>$299</h5>
+              <button type="button" class="btn btn-outline-danger">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card ">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural content.</p>
+              <h5>$499</h5>
+              <button type="button" class="btn btn-outline-danger">Buy Noe</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<section id="from">
+       <h1  style="text-align: center;margin-bottom: 50px;">Join Now</h1>
+  <div class=" container d-flex justify-content-center align-items-center from">
+    <div>
+      <h1>LET'S STAY IN TOUCH</h1>
+      <p style="text-align: center">Get updates on sales, specials and more</p>
+      <form action="" method="get" accept-charset="utf-8">
+        <div class="row">
+        <div class="col-md-8">
+         <input type="email" class="form-control" placeholder="enter your mail" required>
+        </div>
+        <div class="col-md-4">
+          <button type="submit" class="btn btn-outline-dark ">Submit</button>
+          </div>
+        </div>
+      </form>
+       </div>
+  </div>
+</section>
+
+
+<footer>
+  <p> &copy;2021. Panda Commerce. All rights reserved. Sofia, Bulgaria. </p>
+</footer>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
